# Tucil3_13524057

./: CMakeLists.txt  README.md
data/: test.txt  test2.txt
src/: main.cpp
src/game_modules/: Block.cpp  Board.cpp  Tile.cpp
src/headers/game_modules/: Block.hpp  Board.hpp  Tile.hpp
src/headers/pathfinding/: AStar.hpp  Algorithm.hpp  GBFS.hpp  Graph.hpp  Heuristic.hpp  UCS.hpp
src/headers/views/: GUI.hpp
src/headers/views/animation/: ViewAnimation.hpp
src/headers/views/viewElement/: Entry.hpp  View2D.hpp  View3D.hpp
src/headers/views/viewElement/board/: BoardView.hpp  PlaybackControl.hpp  TileView.hpp
src/headers/views/viewElement/controls/: PlaybackControl.hpp  SolverInput.hpp
src/pathfinding/: AStar.cpp  Algorithm.cpp  GBFS.cpp  Graph.cpp  Heuristic.cpp  UCS.cpp
src/views/: GUI.cpp
src/views/animation/: ViewAnimation.cpp
src/views/animation/camera/: CameraManager.cpp  CameraMovement.cpp  View3DCamera.cpp
src/views/viewElement/: Entry.cpp  Interactable.cpp  View2D.cpp  View3D.cpp
src/views/viewElement/board/: BoardView.cpp  PlaybackControl.cpp  TileView.cpp
src/views/viewElement/controls/: PlaybackControl.cpp  SolverInput.cpp
